# openclaw-multiagent-team

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: stop_check.py
.github/workflows/: ci.yml
examples/: build_from_prompt.sh  deploy_to_vercel.sh  fix_existing_repo.sh  serve_http.sh
openclaw/: __init__.py  agents.py  audit.py  brain.py  cli.py  gates.py  models.py  orchestrator.py  prompts.py  providers.py  server.py  tools.py  tui.py
tests/: test_inspector.py  test_smoke.py
tools/: inspector.html  loop.py  omnifinisher.html  run_inspector.py
tools/inspector/: __init__.py  __main__.py  agents.py  config.py  relay.py  scheduler.py  server.py  tools.py
