[project]
name = "openclaw"
version = "0.1.0"
description = "Autonomous multi-agent app builder. Drop in a prompt or a repo — get a built, tested, deployable app."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "openclaw" }]
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
all = ["anthropic>=0.40", "openai>=1.50"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "anthropic>=0.40", "openai>=1.50"]

[project.scripts]
openclaw = "openclaw.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openclaw*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# run_inspector.py is an intentionally compact single-file server; E701/E702 are expected
"tools/run_inspector.py" = ["E701", "E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
